# sourcebook

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: ARCHITECTURE.md  alembic.ini  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_baseline.py  002_pgvector_embeddings.py  003_hybrid_search_tsvector.py  004_workspace_context_cache.py  005_user_activity.py
apps/api/app/: blocks.py  config.py  db.py  deps.py  logging_config.py  models.py  rate_limit.py  schemas.py  security.py  storage.py  usage.py
apps/api/app/agents/: __init__.py  date_tools.py  execution_trace.py  fetch_url.py  gen_ui.py  profiles.py  run_storage.py  runner.py  tool_policy.py  tools.py  visual_tools.py  web_search.py
apps/api/app/chat/: service.py
apps/api/app/ingestion/: __init__.py  chunking.py  embeddings.py  parsers.py  rerank.py  retrieve.py  service.py
apps/api/app/middleware/: request_logging.py
apps/api/app/presentation/: __init__.py  answer.py  context.py  engine.py  evidence.py  handoff.py  interactions.py  layout.py  layout_stabilize.py  llm_json.py  plan_validator.py  planner.py  render_blocks.py  structured.py  ui_intent.py  workspace_context.py  workspace_profile.py
apps/api/app/routers/: agents.py  auth.py  chat.py  dev.py  documents.py  health.py  ingest.py  monitoring.py  notes.py  usage.py  workspaces.py
apps/api/app/visual_summary/: __init__.py  context.py  llm_json.py  pipeline.py  tools.py
apps/api/app/workers/: __init__.py  ingest_jobs.py  queue.py  (+1 more)
apps/api/scripts/: export_block_contract.py
apps/api/tests/: conftest.py  test_agent_profiles.py  test_agent_runner_synthesis.py  test_block_registry.py  test_citation_grounding.py  test_combined_plan.py  test_context_agent.py  test_date_tools.py  test_document_chunks.py  test_ensure_structured.py  test_execution_trace.py  test_fetch_url.py  test_gen_ui_blocks.py  test_handoff.py  test_hybrid_retrieve.py  test_layout_stabilize.py  test_logging.py  test_loop_recovery.py  test_measures_and_metrics.py  test_monitoring.py  test_parsers.py  test_plan_validator.py  test_planner_llm_authority.py  test_presentation_answer.py  test_presentation_engine.py  test_presentation_evidence.py  test_presentation_grounding.py  test_presentation_layout.py  test_presentation_planner.py  test_presentation_structured.py  test_prod_safety.py  test_qualitative_progress.py  test_read_document.py  test_rerank.py  test_run_storage.py  test_storage.py  test_tool_policy.py  test_ui_intent_and_assembly.py  test_ui_intent_scoring.py  test_visual_orchestrator.py  (+7 more)
(+210 files in other folders)
