[project]
name = "sourcebook-api"
version = "0.1.0"
description = "Sourcebook API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "jose[cryptography]>=1.0.0",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.4",
    "langgraph>=1.2.9",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "rq>=2.10.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
